--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>spigot-template-simple</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
-    <name>Spigot Plugin for CoderDojo Workshops</name>
+    <name>Spigot Simple Plugin</name>
     <description>Spigot Simple Plugin</description>
     <url>https://github.com/callisto-systems/spigot-archetype-simple</url>
 	
