--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   
     <groupId>ro.coderdojo.spigot</groupId>
     <artifactId>spigot-template-simple</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>maven-archetype</packaging>
     <name>Spigot Simple Plugin</name>
     <description>Spigot Simple Plugin</description>
